--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -140,6 +140,8 @@ jobs:
 
       - ${{if ne(variables['Build.Reason'], 'PullRequest')}}:
         - pwsh: |
-            npm run coverage -- publish --repo=$(Build.Repository.Name) --ref=$(Build.SourceBranch) --githubToken=$(github-token) --azStorageAccount=$(storage-coverage-user) --azStorageAccessKey=$(storage-coverage-pass)
+            $currentVersion = node -p -e "require('./src/package.json').version";
+            $currentVersion="$currentVersion-$(Build.BuildNumber)";
+            cd src/node_modules/@microsoft.azure/autorest.testserver;
+            npm run coverage -- publish --repo=$(Build.Repository.Name) --ref=$(Build.SourceBranch) --githubToken=$(github-token) --azStorageAccount=$(storage-coverage-user) --azStorageAccessKey=$(storage-coverage-pass) --version=$currentVersion;
           displayName: 'Publish AutoRest Test Server Coverage Report'
-          workingDirectory: src/node_modules/@microsoft.azure/autorest.testserver
