fix start/stop scripts

--- a/src/package.json
+++ b/src/package.json
@@ -16,8 +16,8 @@
     "eslint-fix": "eslint  . --fix --ext .ts",
     "eslint": "eslint  . --ext .ts",
     "build": "tsc -p .",
-    "start-testserver": "./node_modules/.bin/start-autorest-testserver",
-    "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
+    "start-testserver": "./node_modules/.bin/autorest-testserver run",
+    "stop-testserver": "./node_modules/.bin/autorest-testserver stop",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
     "test": "jest --ci",
