--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -120,8 +120,8 @@ jobs:
             go test -run "^Test" -v | $(GOBIN)/go-junit-report -set-exit-code > report.xml
             popd
           }
-          pushd test
-          go run ./autorest/covreport/main.go
+          pushd ./test/autorest
+          go run ./covreport/main.go
           popd
           pushd ./src/node_modules/@microsoft.azure/autorest.testserver
           npm stop
