--- a/src/package.json
+++ b/src/package.json
@@ -16,8 +16,8 @@
     "eslint-fix": "eslint  . --fix --ext .ts",
     "eslint": "eslint  . --ext .ts",
     "build": "tsc -p .",
-    "start-testserver": "./node_modules/.bin/start-autorest-testserver",
-    "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
+    "start-testserver": "./node_modules/.bin/autorest-testserver run",
+    "stop-testserver": "./node_modules/.bin/autorest-testserver stop",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
     "test": "jest --ci",
@@ -48,7 +48,7 @@
     "typescript": "~4.4.3",
     "@typescript-eslint/eslint-plugin": "~2.6.0",
     "@typescript-eslint/parser": "~2.6.0",
-    "@microsoft.azure/autorest.testserver": "3.1.8",
+    "@microsoft.azure/autorest.testserver": "3.3.5",
     "@autorest/autorest": "~3.0.6173",
     "eslint": "~6.6.0",
     "@autorest/extension-base": "~3.4.4",
