--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - script: |
           set -e
           go version
-          go get github.com/jstemmer/go-junit-report
+          go install github.com/jstemmer/go-junit-report@v1.0.0
         displayName: 'Install Dependencies'
         workingDirectory: '$(goTestPath)'
 
