Move track2 branch references to main

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -1,12 +1,12 @@
 trigger:
   branches:
     include:
-    - track2
+    - main
 
 pr:
   branches:
     include:
-    - track2
+    - main
 
 variables:
   NodeVersion: '16.x'
