--- a/src/package.json
+++ b/src/package.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/Azure/autorest.go/issues"
   },
   "homepage": "https://github.com/Azure/autorest.go#readme",
-  "readme": "https://github.com/Azure/autorest.go/blob/track2/readme.md",
+  "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@types/js-yaml": "3.12.1",
     "@types/node": "17.0.23",
