[CODEOWNERS] Update .github owners
Added myself to the CodeOwners for .github dir as I will be helping @jsquire with GitHub CXP on this repo.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 *                        @chlowell @jhendrixMSFT @RickWinter
 
 # Git Hub bot rules
-/.github/fabricbot.json  @jsquire
+/.github/fabricbot.json  @jsquire @ronniegeraghty
