--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,5 @@
 *                        @chlowell @jhendrixMSFT @RickWinter
 
 # Git Hub bot rules
+/.github/CODEOWNERS  @jsquire @ronniegeraghty
 /.github/fabricbot.json  @jsquire @ronniegeraghty
