--- a/eng/pipelines/publish-dev-release.yml
+++ b/eng/pipelines/publish-dev-release.yml
@@ -1,93 +1,16 @@
 trigger: none
 pr: none
 
-variables:
-  NodeVersion: '16.x'
-  goTestPath: '$(system.defaultWorkingDirectory)/test'
-  GOBIN: '$(system.defaultWorkingDirectory)/bin/go'
-
 pool:
-  vmImage: 'ubuntu-18.04'
+  vmImage: "ubuntu-18.04"
 
 steps:
-  - task: NodeTool@0
-    displayName: 'Install Node $(NodeVersion)'
-    inputs:
-      versionSpec: '$(NodeVersion)'
+  - template: ../steps/set-env.yaml
+    parameters:
+      NodeVersion: "16.x"
+      GoVersion: "1.18"
 
-  - script: |
-      cd $(Build.SourcesDirectory)
-      npm install -g "@microsoft/rush"
-      rush update --debug
-      npm install -g autorest
-    displayName: 'Prepare Generator Environment'
-
-  - script: |
-      rush rebuild -v
-    displayName: 'Build Generator Sources'
-
-  - task: GoTool@0
-    inputs:
-      version: '1.18'
-    displayName: "Select Go Version"
-
-  - script: |
-      rush regenerate
-      rush modtidy 2>&1
-      git add -A ./test/.
-      git diff --staged -w 1>&2
-    displayName: 'Regenerate Autorest Tests'
-    failOnStderr: true
-
-  - script: |
-      set -e
-      go version
-      go install github.com/jstemmer/go-junit-report@v1.0.0
-    displayName: 'Install Dependencies'
-    workingDirectory: '$(goTestPath)'
-
-  - pwsh: |
-      $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(goTestPath))
-      foreach ($md in $modDirs) {
-        pushd $md
-        Write-Host "##[command]Executing go build -v ./... in $md"
-        go build -v ./...
-      }
-    displayName: 'Build'
-
-  - pwsh: |
-      $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(goTestPath))
-      foreach ($md in $modDirs) {
-        pushd $md
-        Write-Host "##[command]Executing go vet ./... in $md"
-        go vet ./...
-      }
-    displayName: 'Vet'
-
-  - pwsh: |
-      pushd ./src/node_modules/@microsoft.azure/autorest.testserver
-      npm run start:prod&
-      popd
-      $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir $(goTestPath))
-      foreach ($td in $testDirs) {
-        pushd $td
-        Write-Host "##[command]Executing go test -run "^Test" -v $td | $(GOBIN)/go-junit-report -set-exit-code > report.xml"
-        go test -run "^Test" -v | $(GOBIN)/go-junit-report -set-exit-code > report.xml
-        popd
-      }
-      pushd test
-      go run ./autorest/covreport/main.go
-      popd
-      pushd ./src/node_modules/@microsoft.azure/autorest.testserver
-      npm stop
-      popd
-    displayName: 'Run Acceptance Tests'
-
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: JUnit
-      testResultsFiles: $(goTestPath)/**/report.xml
-      failTaskOnFailedTests: true
+  - template: ../steps/build-test.yaml
 
   - pwsh: |
       $currentVersion = node -p -e "require('./src/package.json').version";
@@ -96,4 +19,4 @@ steps:
       npm version --no-git-tag-version $currentVersion
       npm pack;
       npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Preview version of Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
-    displayName: 'Publish Dev Release'
+    displayName: "Publish Dev Release"
