fix go bin path

--- a/eng/steps/build-test-gotest.yaml
+++ b/eng/steps/build-test-gotest.yaml
@@ -3,18 +3,20 @@ steps:
       rush rebuild -v
     displayName: "Build Generator Sources"
 
-  - pwsh: npm test
+  - script: |
+      export PATH=$PATH:$HOME/go/bin
+      npm test
     displayName: "Run Tests"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.gotest
 
   - task: PublishTestResults@2
     inputs:
       testRunner: JUnit
-      testResultsFiles: $(Build.DefaultWorkingDirectory)/packages/autorest.gotest/**/junit.xml
+      testResultsFiles: $(System.DefaultWorkingDirectory)/packages/autorest.gotest/junit.xml
 
   - task: PublishCodeCoverageResults@1
     inputs:
       codeCoverageTool: Cobertura
-      summaryFileLocation: $(Build.DefaultWorkingDirectory)/packages/autorest.gotest/**/coverage/cobertura-coverage.xml
-      reportDirectory: $(Build.DefaultWorkingDirectory)/packages/autorest.gotest/**/coverage
+      summaryFileLocation: $(System.DefaultWorkingDirectory)/packages/autorest.gotest/coverage/cobertura-coverage.xml
+      reportDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.gotest/coverage
 
