--- a/eng/steps/build-test-gotest.yaml
+++ b/eng/steps/build-test-gotest.yaml
@@ -4,6 +4,11 @@ steps:
     displayName: "Build Generator Sources"
 
   - script: |
+      npm run eslint
+    displayName: "Run Lint"
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.gotest
+
+  - script: |
       export PATH=$PATH:$HOME/go/bin
       npm test
     displayName: "Run Tests"
