test: update test for fix

--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
@@ -6959,6 +6959,7 @@ operationGroups:
                     capacity: 1
                     tier: Standard
                   tags:
+                    $(subscriptionId): $(subscriptionId)
                     key1: value1
                 resourceGroupName: myResourceGroup
                 resourceName: mySignalRService
@@ -13628,6 +13629,9 @@ testModel:
                         tags:
                           schema: *ref_86
                           properties:
+                            $(subscriptionId):
+                              schema: *ref_1
+                              rawValue: $(subscriptionId)
                             key1:
                               schema: *ref_1
                               rawValue: value1
@@ -13869,6 +13873,7 @@ testModel:
                   armsignalr.ResourceInfo{
                   Location: to.Ptr("eastus"),
                   Tags: map[string]*string{
+                  "$(subscriptionId)": to.Ptr("$(subscriptionId)"),
                   "key1": to.Ptr("value1"),
                   },
                   Identity: &armsignalr.ManagedIdentity{
@@ -16494,7 +16499,7 @@ testModel:
               exampleFile: ../examples/SignalR_CreateOrUpdate.json
               exampleModel:
                 name: ../examples/SignalR_CreateOrUpdate.json
-                checkResponse: false
+                checkResponse: true
                 clientParameters:
                   - exampleValue:
                       schema: *ref_171
@@ -17878,8 +17883,15 @@ testModel:
                     headers: &ref_582
                       Azure-AsyncOperation: https://management.azure.com/subscriptions/subid/providers/Microsoft.SignalRService/...pathToOperationStatus...
                       Location: https://management.azure.com/subscriptions/subid/providers/Microsoft.SignalRService/...pathToOperationResult...
-              outputVariables: {}
-              outputVariablesModel: {}
+              outputVariables:
+                signalRId:
+                  fromResponse: /id
+                  isPtr: true
+              outputVariablesModel:
+                signalRId:
+                  - type: object
+                    languageName: .ID
+                    languages: *ref_382
               parameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -18934,6 +18946,9 @@ testModel:
                             tags:
                               schema: *ref_86
                               properties:
+                                $(subscriptionId):
+                                  schema: *ref_1
+                                  rawValue: $(subscriptionId)
                                 key1:
                                   schema: *ref_1
                                   rawValue: value1
@@ -19175,6 +19190,7 @@ testModel:
                       armsignalr.ResourceInfo{
                       Location: to.Ptr(location),
                       Tags: map[string]*string{
+                      subscriptionId: to.Ptr(subscriptionId),
                       "key1": to.Ptr("value1"),
                       },
                       Identity: &armsignalr.ManagedIdentity{
@@ -19944,6 +19960,7 @@ testModel:
                     capacity: 1
                     tier: Standard
                   tags:
+                    $(subscriptionId): $(subscriptionId)
                     key1: value1
                 resourceGroupName: $(resourceGroupName)
                 resourceName: $(resourceName)
