--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
@@ -6949,6 +6949,7 @@ operationGroups:
                     capacity: 1
                     tier: Standard
                   tags:
+                    $(subscriptionId): $(subscriptionId)
                     key1: value1
                 resourceGroupName: myResourceGroup
                 resourceName: mySignalRService
