--- a/packages/autorest.gotest/package.json
+++ b/packages/autorest.gotest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@autorest/gotest",
-    "version": "4.2.1",
+    "version": "4.2.2",
     "description": "Autorest extension for go test generation",
     "main": "dist/index.js",
     "scripts": {
@@ -30,6 +30,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "~26.0.24",
+        "@types/lodash": "^4.14.183",
         "@types/node": "17.0.23",
         "@typescript-eslint/eslint-plugin": "~4.1.1",
         "@typescript-eslint/parser": "~4.1.1",
@@ -50,13 +51,12 @@
         "@autorest/testmodeler": "~2.3.1",
         "@azure-tools/codegen": "~2.9.1",
         "@azure-tools/linq": "~3.1.0",
-        "@types/lodash": "~4.14.176",
         "autorest": "^3.2.3",
         "cross-env": "^7.0.3",
         "jest-junit": "^12.2.0",
         "js-yaml": "3.13.1",
         "jsonpath": "^1.1.1",
-        "lodash": "~4.17.21",
+        "lodash": "^4.17.21",
         "node-yaml": "^3.2.0",
         "nunjucks": "^3.2.3",
         "oav": "3.0.3",
