build: release @autorest/gotest_v4.3.0

--- a/swagger/specification/compute/resource-manager/Microsoft.Compute/stable/2021-03-01/test-scenarios/sample.yaml
+++ b/swagger/specification/compute/resource-manager/Microsoft.Compute/stable/2021-03-01/test-scenarios/sample.yaml
@@ -2,6 +2,9 @@ scope: ResourceGroup
 variables:
   resourceName: signalrswaggertest4
   fakeStepVar: signalrswaggertest4
+  testPrefix:
+    type: string
+    prefix: test
 prepareSteps:
   - step: Delete-proximity-placement-group
     exampleFile: ../examples/DeleteAProximityPlacementGroup.json
