publish autorest test server coverage report only triggered in main branch ci

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -36,3 +36,5 @@ jobs:
           GoVersion: "$(go.version)"
 
       - template: ../steps/build-test.yaml
+        parameters:
+          PublishAutorestCoverage: true
